syntax = "proto3";

package protobuf;

option go_package = "LineProcessor/proto";

service GRPCApi {
    rpc SubscribeOnSportsLines(stream Request) returns (stream Response) {}
}

message Request {
    repeated string sport = 1;
    int32 timeInterval = 2;
}

message Response {
    string SportName = 1;
    float SportRatio = 2;
}